Fix z-index and add text-align: center;

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -21,6 +21,7 @@
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   letter-spacing: -0.6px;
+  z-index: 2;
 }
 
 .header__span-accent {
@@ -37,6 +38,7 @@
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
+  z-index: 2;
 }
 
 .header__image {
@@ -56,6 +58,7 @@
   font-size: 16px;
   line-height: 20px;
   color: #838383;
+  align-items: center;
 }
 
 .header__paragraph {
